--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
           <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="schedules.html">Schedules</a>
+          <a class="nav-link" href="schedules.html">Schedule</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="scores.html">Scores</a>
