--- a/public/schedules.html
+++ b/public/schedules.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="schedules.html">Schedules</a>
+          <a class="nav-link" href="schedules.html">Schedule</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="scores.html">Scores</a>
@@ -60,7 +60,7 @@
 <!--Header-->  
   <div class="hero-image" id="schebanner">
     <div class="hero-text">
-      <p>Schedules</p>
+      <p>Schedule</p>
     </div>
   </div>
 
@@ -180,6 +180,14 @@
 </table>
 </div>
 
+<br>
+<br>
+
+<footer id="sticky-footer" class="py-3">
+  <div class="container text-center">
+    <small>Copyright &copy; Slam Dunk 2020</small>
+  </div>
+</footer>
 
     
 
