--- a/public/games.html
+++ b/public/games.html
@@ -19,7 +19,7 @@
 
 <!--Navbar-->  
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #1A1A1A;">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="#">
         <img src="images/slamball.png" width="40" height="40" alt="" loading="lazy">
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,15 +28,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="schedules.html">Schedules</a>
+          <a class="nav-link" href="/schedules">Schedules</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/scores">Scores</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="scores.html">Scores</a>
-        </li>
-        <li class="nav-item">
             <a class="nav-link" href="games.html">Games</a>
           </li>
         <li class="nav-item">
@@ -58,9 +58,9 @@
     </div>
   </nav>
 <!--Header-->  
-  <div class="hero-image" id="scobanner">
+  <div class="hero-image" id="gambanner">
     <div class="hero-text">
-      <p>Scores</p>
+      <p>Games</p>
     </div>
   </div>
 
