--- a/public/main.html
+++ b/public/main.html
@@ -10,7 +10,7 @@
     <!--Favicon-->
     <link rel="icon" type="image/png" sizes="32x32" href="stylesheets/favicon.png">
     <!--JQuery-->
-    <script src='jquery-3.2.1.min.js'></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!--Font Kit-->
     <link rel="stylesheet" href="https://use.typekit.net/wzc2zuw.css">
     <title>Slam Dunk</title>
@@ -32,11 +32,14 @@
           <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="schedules.html">Schedule</a>
+          <a class="nav-link" href="schedules.html">Schedules</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="scores.html">Scores</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="games.html">Games</a>
+          </li>
         <li class="nav-item">
             <a class="nav-link" href="news.html">News</a>
         </li>
