--- a/public/schedules.html
+++ b/public/schedules.html
@@ -10,7 +10,7 @@
     <!--Favicon-->
     <link rel="icon" type="image/png" sizes="32x32" href="stylesheets/favicon.png">
     <!--JQuery-->
-    <script src='jquery-3.2.1.min.js'></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <!--Font Kit-->
     <link rel="stylesheet" href="https://use.typekit.net/wzc2zuw.css">
     <title>Slam Dunk</title>
@@ -19,7 +19,7 @@
 
 <!--Navbar-->  
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #1A1A1A;">
-    <a class="navbar-brand" href="index.html">
+    <a class="navbar-brand" href="main.html">
         <img src="images/slamball.png" width="40" height="40" alt="" loading="lazy">
       </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,14 +28,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="main.html">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="schedules.html">Schedule</a>
+          <a class="nav-link" href="/">Schedules</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="scores.html">Scores</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="games.html">Games</a>
+          </li>
         <li class="nav-item">
             <a class="nav-link" href="news.html">News</a>
         </li>
@@ -57,7 +60,7 @@
 <!--Header-->  
   <div class="hero-image" id="schebanner">
     <div class="hero-text">
-      <p>Schedule</p>
+      <p>Schedules</p>
     </div>
   </div>
 
@@ -155,12 +158,11 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-      <td>...</td>
-    </tr>
+    {{#each games}}
+   <tr>{{dataValues.away}}</tr>
+   <tr>{{dataValues.home}}</tr>
+   <tr>{{dataValues.dateandtime}}</tr>
+  {{/each}}
     <tr>
       <td>...</td>
       <td>...</td>
@@ -175,16 +177,11 @@
     </tr>
   </tbody>
 </table>
+
+
+
 </div>
 
-<br>
-<br>
-
-<footer id="sticky-footer" class="py-3">
-  <div class="container text-center">
-    <small>Copyright &copy; Slam Dunk 2020</small>
-  </div>
-</footer>
 
     
 
